# MAI_OS

./: README.md
KP/: CMakeLists.txt
KP/doc/: report.docx  report_sph.txt
KP/include/: intvector.c  intvector.h  kptools.c  kptools.h  playervector.c  playervector.h  sessionmap.c  sessionmap.h  sessionvector.c  sessionvector.h
KP/src/: apidemon.cpp  client.c  client.cpp  server.c  server.cpp
lab1/: report.docx
lab1/doc/: report.docx
lab2/: CMakeLists.txt  child.cpp  main.cpp
lab2/doc/: l2_report.docx
lab2/src/: a.out  ccc.c  child  child1.cpp  child2.cpp  main.cpp
lab3/: CMakeLists.txt  main.c
lab3/benchmark/: run.sh  test  test.in
lab3/doc/: report.docx
lab3/src/: main1.c  main2.c
lab4/: CMakeLists.txt
lab4/doc/: report.docx
lab4/include/: labtools.h
lab4/src/: child1.cpp  child2.cpp  labtools.h  main.cpp
lab5/: CMakeLists.txt  Makefile  lib1.h  lib2.h  main.c  main1.c  main2.c
lab5/doc/: report.docx
lab5/include/: lib.h
lab5/src/: lib1.c  lib2.c  main1.c  main2.c
lab6/: CMakeLists.txt  log.txt  make.sh
lab6/doc/: report.docx
lab6/include/: labtools.h
lab6/src/: apidemon.cpp  client.cpp  demon.cpp  server.cpp
lab6_v12/: Makefile  calculation.cpp  control.cpp  list.hpp  messages.hpp
