cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project(client LANGUAGES C)
set(CMAKE_C_FLAGS "-pthread -fsanitize=address -g")
add_library(help_lib OBJECT ./include/kptools.c ./include/intvector.c ./include/playervector.c ./include/sessionmap.c)
add_executable(client ./src/client.c)
add_executable(server ./src/server.c)
target_include_directories(client PRIVATE ./include)
target_include_directories(server PRIVATE include)
target_link_libraries(client PRIVATE help_lib)
target_link_libraries(server PRIVATE help_lib)
